# paralGaripov

./: .gitignore  CMakeLists.txt  no1.cpp  no10.cpp  no11.cpp  no12.cpp  no13.cpp  no14.cpp  no15.cpp  no2.cpp  no3.cpp  no4.cpp  no5.cpp  no6.cpp  no7.cpp  no8.cpp  no9.cpp
